Add mailto function, expand projects + styling

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <h3>This Website</h3>
                     </summary>
                     <img class="project-image" src="" alt="">
-                    <p class="project description">My first website</p>
+                    <p class="project description">This website is a running project and will be updated continiously to represent my growth in  Front- and Back-End development.</p>
                 </details>
 
                 <details class="project">
@@ -48,8 +48,15 @@
                         <h3>Credit Card Check</h3>
                     </summary>
                     <img class="project-image" src="" alt="">
+                    <p class="project-description">A simple algorithm to check credit card number validation to get familliar with JavaScript</p>
+                </details>
 
-                    <p class="project-description">Algorithm to check credit card number validation</p>
+                <details>
+                    <summary class="project-title">
+                        <h3>Tea Shop</h3>
+                        <img src="./resources/tea.JPG" alt="image of a website meant for a Tea Shop">
+                        <p class="project-description">The first complex website project to show knowledge with flex containers</p>
+                    </summary>
                 </details>
             </div>
         </section>
@@ -96,14 +103,13 @@
 
     <footer>
         <h2 id="contact">Contact</h2>
-            <p></p>
+            <p>Want to get in touch? Below you'll find multiple ways to reach me!</p>
             <div>
-                <!--Set up Mailing-->
                 <a href="https://github.com/jan-s-baer">
-                    <i class="fa-brands fa-github"></i>
+                    <i class="fa-brands fa-github" id="contact-elements"></i>
                 </a>
-                <a href="">
-                    <i class="fa-regular fa-envelope"></i>
+                <a href="mailto:jan.s.baer@googlemail.com">
+                    <i class="fa-regular fa-envelope" id="contact-elements"></i>
                 </a>
             </div>
     </footer>
