Fix tea shop image

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                     <p class="project-description">A simple algorithm to check credit card number validation to get familliar with JavaScript</p>
                 </details>
 
-                <details>
+                <details class="project">
                     <summary class="project-title">
                         <h3>Tea Shop</h3>
-                        <img src="./resources/tea.JPG" alt="image of a website meant for a Tea Shop">
-                        <p class="project-description">The first complex website project to show knowledge with flex containers</p>
                     </summary>
+                    <img class="project-image" src="./resources/tea.JPG" alt="image of a website meant for a Tea Shop"> 
+                    <p class="project-description">The first complex website project to show knowledge with flex containers</p>
                 </details>
             </div>
         </section>
