Add targets to a's

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h2>About Me</h2>
                     <!--Add text here in p's-->
                     <p>Hi! I'm Jan Baer, a software developer from Mainz, Germany.</p>
-                    <p>I started my programming journey in July 2023 and have progressed continiously ever since</p>
+                    <p>I started my programming journey in July 2023 and have progressed continiously ever since.</p>
                 </div>
                 <!--Add professional headshot here-->
                 <img src="./resources/JanBaerBild.jpg" alt="a picture of Jan Baer, owner of this website" class="portrait">
@@ -55,7 +55,9 @@
                     <summary class="project-title">
                         <h3>Tea Shop</h3>
                     </summary>
-                    <img class="project-image" src="./resources/tea.JPG" alt="image of a website meant for a Tea Shop"> 
+                    <a href="https://github.com/jan-s-baer/teashop" target="_blank">
+                        <img class="project-image" src="./resources/tea.JPG" alt="image of a website meant for a Tea Shop"> 
+                    </a>
                     <p class="project-description">The first complex website project to show knowledge with flex containers</p>
                 </details>
             </div>
@@ -105,7 +107,7 @@
         <h2 id="contact">Contact</h2>
             <p>Want to get in touch? Below you'll find multiple ways to reach me!</p>
             <div>
-                <a href="https://github.com/jan-s-baer">
+                <a href="https://github.com/jan-s-baer" target="_blank">
                     <i class="fa-brands fa-github" id="contact-elements"></i>
                 </a>
                 <a href="mailto:jan.s.baer@googlemail.com">
