--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                     <p>Hi! I'm Jan Baer, a software developer from Mainz, Germany.</p>
                     <p>I started my programming journey in July 2023 and have progressed continiously ever since.</p>
                 </div>
-                <!--Add professional headshot here-->
-                <img src="./resources/JanBaerBild.jpg" alt="a picture of Jan Baer, owner of this website" class="portrait">
+                <div class="portrait-container">
+                    <!--Add professional headshot here-->
+                    <img class="portrait" src="./resources/JanBaerBild.jpg" alt="a picture of Jan Baer, owner of this website">
+                </div>
             </div>
         </section>
 
@@ -39,7 +41,9 @@
                     <summary class="project-title">
                         <h3>This Website</h3>
                     </summary>
-                    <img class="project-image" src="" alt="">
+                    <a href="" target="_blank">
+                        <img class="project-image" src="" alt="">
+                    </a>
                     <p class="project description">This website is a running project and will be updated continiously to represent my growth in  Front- and Back-End development.</p>
                 </details>
 
@@ -47,7 +51,9 @@
                     <summary class="project-title">
                         <h3>Credit Card Check</h3>
                     </summary>
-                    <img class="project-image" src="" alt="">
+                    <a href="https://github.com/jan-s-baer/creditcard" target="_blank">
+                        <img class="project-image" src="./resources/creditcard.JPG" alt="a snapshot of JavaScript code for credit card validation">
+                    </a>
                     <p class="project-description">A simple algorithm to check credit card number validation to get familliar with JavaScript</p>
                 </details>
 
